# screenocr-tauri

./: .gitignore  PROJECT_CREATED.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  一键启动.bat  功能实现完成报告.md  启动开发环境.bat  安装依赖.bat  完成文件清单.md  开发进度报告.md  快速开始.md  最终实现总结.md  项目创建完成报告.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  hotkey.rs  main.rs  ocr.rs  screenshot.rs
src/components/: OCROverlay.vue
src/views/: Settings.vue
