[package]
name = "screenocr-tauri"
version = "0.1.0"
description = "现代化的 OCR 屏幕识别工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "dialog-all", "clipboard-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
image = "0.24"
base64 = "0.21"

# 屏幕截图
screenshots = "0.8"

# 配置目录
dirs = "5.0"

# OCR（暂时注释，需要系统安装 Tesseract）
# tesseract = "0.13"

# 全局热键
global-hotkey = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

